Project

General

Profile

Actions

Bug #39487

closed

rgw multisite: datalogs/bilogs are not trimmed if no peer zones are processing them

Added by Casey Bodley almost 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite trim
Backport:
luminous mimic nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When no peer zones are configured to sync from a source zone, the minimum markers are empty and no entries are trimmed. The entire log should be trimmed in this case.


Related issues 4 (0 open4 closed)

Related to rgw - Bug #39283: rgw multisite: bucket index logs do not get trimmed unless zones 'sync_from_all'ResolvedCasey Bodley

Actions
Copied to rgw - Backport #40629: mimic: rgw multisite: datalogs/bilogs are not trimmed if no peer zones are processing themResolvedNathan CutlerActions
Copied to rgw - Backport #40630: nautilus: rgw multisite: datalogs/bilogs are not trimmed if no peer zones are processing themResolvedCasey BodleyActions
Copied to rgw - Backport #40631: luminous: rgw multisite: datalogs/bilogs are not trimmed if no peer zones are processing themRejectedActions
Actions #1

Updated by Casey Bodley almost 5 years ago

  • Related to Bug #39283: rgw multisite: bucket index logs do not get trimmed unless zones 'sync_from_all' added
Actions #2

Updated by Casey Bodley almost 5 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 27794
Actions #3

Updated by Casey Bodley almost 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40629: mimic: rgw multisite: datalogs/bilogs are not trimmed if no peer zones are processing them added
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40630: nautilus: rgw multisite: datalogs/bilogs are not trimmed if no peer zones are processing them added
Actions #6

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40631: luminous: rgw multisite: datalogs/bilogs are not trimmed if no peer zones are processing them added
Actions #7

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF