rgw: data/bilogs are trimmed when no peers are reading them

if no peers zones are configured to sync from us, we can safely trim
our entire log. start with the marker '99999999' (which compares larger
than any key based on a timestamp) instead of an empty marker, then take
the minimum of that with any peer markers

Fixes: http://tracker.ceph.com/issues/39487

Signed-off-by: Casey Bodley <cbodley@redhat.com>